docs/samples/echo.kube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
  labels:
    istio-gateway: "true"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: echoserver
spec:
  replicas: 5
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 80
        env:
        - name: PORT
          value: "80"
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: echoserver
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver
  namespace: echoserver
spec:
  hostnames:
    - echoserver.fpkmon.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      #name: stable-standalone
      name: stable-internal
      namespace: istio
      #port: 443
      port: 80
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echoserver
          namespace: echoserver
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
